@@ -50,6 +50,10 @@ task copyToLib(type: Copy) {
 
 tasks.withType(Test) {
     useJUnitPlatform()
+    jvmArgs(
+        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.util=ALL-UNNAMED'
+    )
 }
 
 
